--- a/OracleJETApplication/templates/labor.tmpl - old.html
+++ b/OracleJETApplication/templates/labor.tmpl - old.html
@@ -25,7 +25,7 @@
     <div class="oj-sm-12 oj-md-12 oj-lg-10 oj-xl-10 right">
 
         <!-- large template -->
-        <script type="text/html" id="med_lg_xl_template">
+        <script type="text/html" id="md_lg_xl_template">
             <div class="oj-row">
                 <h2><span data-bind="css: iconClass"></span><span data-bind="text: sectionName"></span></h2>
                 <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12">
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </script>
-        <div data-bind="template: {name: $root.medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
+        <div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
 
     </div>
     <!-- end of Right side -->
