--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -1,6 +1,6 @@
 <!-- large template -->
-<script type="text/html" id="med_lg_xl_template">
-    <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
+<script type="text/html" id="md_lg_xl_template">
+    <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
         <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
             <span data-bind="text: pageHeading"></span>
@@ -14,4 +14,4 @@
 
 </script>
 
-<div data-bind="template: {name: $root.medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
