--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1377,13 +1377,13 @@ $vTabsPanelBorderColor: $panel1BorderColor;
 .oj-offcanvas-open{
     background-color:$headerOffCanvas;
 }
-.appheader-appname{
-    color: $headerLogoText;
-    display: block;
-    text-align: left;
-    margin-top: 14px;
-    margin-left:5px;
-}
+//.appheader-appname{
+//    color: $headerLogoText;
+//    display: block;
+//    text-align: left;
+//    margin-top: 14px;
+//    margin-left:5px;
+//}
 
 //Header Navigation Icon - Text
 .oj-navigationlist-item-icon{
@@ -1437,9 +1437,6 @@ li {
 //General Styles
 body, html{
     height:100%;
-}
-#mainCol{
-    padding:0;
 }
 
 //Header styles
@@ -1498,8 +1495,8 @@ html:not([dir="rtl"]) .oj-navigationlist-horizontal:not(.oj-navigationlist-stack
         padding-left: 1.072rem;
     }
     //Header
-    .page-header {
-        padding: 10px 0;
+    .page-header > h1 {
+        margin: 0;
     }
 
     .oj-selected {
@@ -1513,11 +1510,25 @@ html:not([dir="rtl"]) .oj-navigationlist-horizontal:not(.oj-navigationlist-stack
     .page-sub-navigation {
         padding-left: 25px;
     }
+    #app-main-area{
+        padding:0 15px;
+    }
+
 }
 
 //large/desktop (UP)
 @media only screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
-
+    .app-header-desktop{
+        padding:15px 10px 0 10px;
+    }
+    .appheader-appname{
+        color: $headerLogoText;
+        font-size:12px;
+        display:inline-block;
+    }
+    .appheader-logo-oracle{
+        margin-bottom:10px;
+    }
 }
 
 //xLarge (UP)
@@ -1534,6 +1545,9 @@ html:not([dir="rtl"]) .oj-navigationlist-horizontal:not(.oj-navigationlist-stack
     }
     .oj-navigationlist-item-icon{
         font-size: $headerNavigationMobileSize !important;
+    }
+    #mainCol{
+        padding:0;
     }
 }
 // MD IPad (CAP)
@@ -1572,14 +1586,14 @@ html:not([dir="rtl"]) .oj-navigationlist-horizontal:not(.oj-navigationlist-stack
         width: 90%;
         margin-left: 25px;
     }
-    .appheader-appname {
-        color: $headerLogoText;
-        display: block;
-        text-align: left;
-        margin-top: 17px;
-        margin-left: 5px;
-        font-size: .875rem;
-    }
+//    .appheader-appname {
+//        color: $headerLogoText;
+//        display: block;
+//        text-align: left;
+//        margin-top: 17px;
+//        margin-left: 5px;
+//        font-size: .875rem;
+//    }
 
     .navigationlist-item-icon{
         font-size: $mediumFontSize;
@@ -1686,9 +1700,9 @@ html:not([dir="rtl"]) .oj-navigationlist-horizontal:not(.oj-navigationlist-stack
 //        vertical-align: 2px;
 //    }
     //Main Div height
-    #mainCol{
-        min-height: 1000px;
-    }
+//    #mainCol{
+//        min-height: 1000px;
+//    }
     //Router Div
     .routerDiv{
         min-height: 1000px;
