--- a/OracleJETApplication/templates/header-bckup.tmpl.html
+++ b/OracleJETApplication/templates/header-bckup.tmpl.html
@@ -1,25 +1,59 @@
 <!-- small template -->
-<script type="text/html" id="sm_md_header_template">
+<script type="text/html" id="sm_template">
     <div class="oj-row oj-cols-nopad app-header-mobile">
         <div class="oj-sm-10 oj-col">
             <button class='oj-button-half-chrome' data-bind="click:toggleAppDrawer,
 			     ojComponent: {component:'ojButton',
-                                    label: offScreenButtonLabel, 
-                                    display: 'icons', 
+                                    label: offScreenButtonLabel,
+                                    display: 'icons',
                                     icons: {start: offScreenButtonIconClass}}">
             </button>
             <span role="img" class="appheader-logo-oracle" title="Oracle Logo" alt="Oracle Logo"></span>
         </div>
         <div class="oj-sm-2 oj-col oj-helper-text-align-right">
             <button class='oj-button-half-chrome' data-bind="ojComponent: { component: 'ojButton',
-                             label: 'Avatar', 
+                             label: 'Avatar',
                              display: 'icons',
                              icons: {start:'oj-icon fa fa-user'},
                              menu: '#appheaderGlobalNavMenuId'
                              }">
             </button>
         </div>
-        <div class="oj-sm-3 oj-helper-text-align-right">
+    </div>
+    <div class="oj-sm-12">
+            <div id="ojAppNav2" class="oj-lg-justify-content-center oj-xl-justify-content-flex-end" data-bind="ojComponent: {component: 'ojNavigationList',
+                              drillMode: 'none',
+                              edge: 'top',
+                              selection: $root.router.stateId(),
+                              data: $root.dataSource,
+                              optionChange: $root.optionChangeHandler,
+                              item: { template: 'app_nav_template' }
+                              }" aria-label="Choose only one navigation element">
+            </div>
+        </div>
+</script>
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+    <div class="oj-row">
+        <!--
+                <div class="oj-sm-only-hide oj-md-only-hide oj-lg-4 oj-xl-5">
+                    <div role="img" class="oj-icon appheader-logo-oracle" title="Oracle Logo" alt="Oracle Logo"></div>
+                    <div class="appheader-appname" data-bind="text: appName"></div>
+                </div>
+-->
+        <div class="oj-md-12 oj-lg-5 oj-xl-4">
+            <div id="ojAppNav3" class="oj-lg-justify-content-center oj-xl-justify-content-flex-end" data-bind="ojComponent: {component: 'ojNavigationList',
+                              drillMode: 'none',
+                              edge: 'top',
+                              selection: $root.router.stateId(),
+                              data: $root.dataSource,
+                              optionChange: $root.optionChangeHandler,
+                              item: { template: 'app_nav_template' }
+                              }" aria-label="Choose only one navigation element">
+            </div>
+        </div>
+        <div class="oj-md-only-hide oj-lg-3 oj-xl-3 oj-helper-text-align-right">
+
             <ul id="appheaderGlobalNavMenuId" data-bind="ojComponent: {component: 'ojMenu', select: menuItemSelect}" style="display:none">
 
                 <li data-bind="attr: {label: userName}">
@@ -33,52 +67,15 @@
                 <!-- /ko -->
             </ul>
         </div>
-    </div>
-    <div class="oj-sm-12">
-        <div id="app-header-mobile-nav" data-bind="ojComponent: {component: 'ojNavigationList',
-                              drillMode: 'none', 
-                              edge: 'top', 
-                              selection: $root.router.stateId(),
-                              data: $root.dataSource,
-                              optionChange: $root.optionChangeHandler,
-                              item: { template: 'app_nav_template' }
-                              }" aria-label="Choose only one navigation element">
-        </div>
-    </div>
-</script>
-<!-- large template -->
-<script type="text/html" id="lg_xl_header_template">
-    <div class="oj-row app-header-desktop">
-        <div class="oj-lg-5 oj-xl-4 oj-col">
-                <div role="img" class="oj-icon appheader-logo-oracle" title="Oracle Logo" alt="Oracle Logo"></div>
-                <div class="appheader-appname" data-bind="text: appName"></div>
-        </div>
+        <div class="oj-toolbar-no-chrome" aria-controls="player" data-bind="ojComponent: {component:'ojToolbar'}">
 
-        <div class="oj-lg-4 oj-xl-5 oj-col">
-            <div id="app-header-desktop-nav" class="oj-lg-justify-content-center oj-xl-justify-content-flex-end" data-bind="ojComponent: {component: 'ojNavigationList',
-                              drillMode: 'none',
-                              edge: 'top',
-                              selection: $root.router.stateId(),
-                              data: $root.dataSource,
-                              optionChange: $root.optionChangeHandler,
-                              item: { template: 'app_nav_template' }
-                              }" aria-label="Choose only one navigation element">
-            </div>
-        </div>
-
-        <div class="oj-lg-3 oj-xl-3 oj-helper-text-align-right oj-col">
             <!-- This pulldown menu is used for wider screens -->
             <button id="menuButton" class='oj-button-half-chrome' data-bind="ojComponent: { component: 'ojButton', label: userName, menu: '#appheaderGlobalNavMenuId'}">
             </button>
-            <ul id="appheaderGlobalNavMenuId" data-bind="ojComponent: {component: 'ojMenu', select: menuItemSelect}" style="display:none">
 
-                <!-- ko foreach: globalNavItems -->
-                <li data-bind="attr: {id: label}">
-                    <a data-bind="text: label, href: url"></a>
-                </li>
-                <!-- /ko -->
-            </ul>
-            </div>
+
+            <!-- appheaderMenuAndToolbarContainer -->
+        </div>
     </div>
 </script>
 <!-- oj-row -->
@@ -99,4 +96,5 @@
         </a>
     </li>
 </script>
-<div data-bind="template: {name: $root.large() ? 'lg_xl_header_template' : 'sm_md_header_template'}"></div>
+
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
