--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -1,5 +1,5 @@
 <!-- large template -->
-<script type="text/html" id="med_lg_xl_template">
+<script type="text/html" id="md_lg_xl_template">
     <div class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
         <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
@@ -14,4 +14,4 @@
 
 </script>
 
-<div data-bind="template: {name: $root.medium() ? 'med_lg_xl_template' : 'sm_template'}"></div>
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
