--- a/OracleJETApplication/templates/sidebar-left.tmpl.html
+++ b/OracleJETApplication/templates/sidebar-left.tmpl.html
@@ -1,8 +1,8 @@
 <div id="sideNavigationContainer">
     <div data-bind="text:username"></div>
     <div data-bind="text:property"></div>
-    <input type="text" placeholder="My 1st Page">
-    <ul class="side-nav" data-bind="foreach: dataSideSource">
+    <input type="text" placeholder="My 1st Page" class="sidebar-left-input">
+    <ul class="sidebar-left-nav" data-bind="foreach: dataSideSource">
         <li data-bind="attr: {id: name}">
             <a data-bind="text: name, href: url"> <span class="sideLink"></span> </a>
         </li>
