--- a/OracleJETApplication/templates/icare.tmpl.html
+++ b/OracleJETApplication/templates/icare.tmpl.html
@@ -1,3 +1,28 @@
+<!-- small template -->
+<script type="text/html" id="sm_template">
+    <div id="tabs-container">
+        <div id="selected-title" data-bind="click: hideSections">
+            <a href="#" data-bind="text:currentSection"></a>
+        </div>
+        <div id="tabs" data-bind="ojComponent:{component: 'ojTabs',  orientation: 'vertical'}">
+            <!-- tab bar -->
+            <ul class="vertical-tabs" data-bind="visible: sectionsState, foreach: dataTabSource">
+                <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
+            </ul>
+
+            <!-- tab contents -->
+            <!-- ko foreach: dataTabSource -->
+                <div data-bind="attr: {id: 'tab-' + id}">
+                    <div data-bind="ojModule: {
+                            name: 'icare/' + fileNameJs,
+                            viewName: 'icare/' + fileName + '-small'}">
+                    </div>
+                </div>
+            <!-- /ko -->
+        </div>
+    </div>
+</script>
+
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
@@ -7,52 +32,24 @@
         </h1>
         <span class="page-sub-navigation">
             <span data-bind="text: pageSubNavigation"></span>
-            <a href="#">change</a>
+        <a href="#">change</a>
         </span>
     </div>
     <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
         <!-- tab bar -->
-        <ul>
-            <!-- ko foreach: dataTabSource -->
+        <ul data-bind="foreach: dataTabSource">
             <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
-            <!-- /ko -->
         </ul>
 
         <!-- tab contents -->
         <!-- ko foreach: dataTabSource -->
-        <div data-bind="attr: {id: 'tab-' + id}">
-            <div data-bind="ojModule: {
-                        name: 'icare/' + fileNameJs,
-                        viewName: 'icare/' + fileName + '-large'}">
-            </div>
-        </div>
-        <!-- /ko-->
-    </div>
-</script>
-<!-- small template -->
-<script type="text/html" id="sm_template">
-    <div id="tabs-container">
-        <div id="selected-title" data-bind="click: hideSections">
-            <a href="#" data-bind="text:currentSection"></a>
-        </div>
-        <div id="tabs" data-bind="ojComponent:{component: 'ojTabs',  orientation: 'vertical'}">
-            <!-- tab bar -->
-            <ul class="vertical-tabs" data-bind="visible: sectionsState">
-                <!-- ko foreach: dataTabSource -->
-                <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
-                <!-- /ko -->
-            </ul>
-
-            <!-- tab contents -->
-            <!-- ko foreach: dataTabSource -->
             <div data-bind="attr: {id: 'tab-' + id}">
                 <div data-bind="ojModule: {
-                        name: 'icare/' + fileNameJs,
-                        viewName: 'icare/' + fileName + '-small'}">
+                            name: 'icare/' + fileNameJs,
+                            viewName: 'icare/' + fileName + '-large'}">
                 </div>
             </div>
-            <!-- /ko-->
-        </div>
+        <!-- /ko-->
     </div>
 </script>
 
