--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -1,3 +1,29 @@
+<!-- small template -->
+<script type="text/html" id="sm_template">
+    <div id="tabs-container">
+        <div id="selected-title" data-bind="click: hideSections">
+            <a href="#" data-bind="text:currentSection"></a>
+        </div>
+        <div id="tabs" data-bind="ojComponent:{component: 'ojTabs',  orientation: 'vertical'}">
+            <!-- tab bar -->
+            <ul class="vertical-tabs" data-bind="visible: sectionsState, foreach: dataTabSource">
+                <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
+            </ul>
+            <h2 data-bind="text: currentSection"></h2>
+            <!-- tab contents -->
+            <!-- ko foreach: dataTabSource -->
+                <div data-bind="attr: {id: 'tab-' + id}">
+                    <div data-bind="ojModule: {
+                            name: 'labor/' + fileNameJs,
+                            viewName: 'labor/' + fileName + '-small'}">
+                    </div>
+                </div>
+            <!-- /ko -->
+        </div>
+
+    </div>
+</script>
+
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
@@ -5,13 +31,28 @@
             <span data-bind="css: pageHeadingIconClass"></span>
             <span data-bind="text: pageHeading"></span>
         </h1>
-        <span data-bind="text: pageSubNavigation"></span>
-        <a href="#">change</a>
+        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+            <a href="#">change</a>
+        </span>
     </div>
-</script>
-<!-- small template -->
-<script type="text/html" id="sm_template">
+    <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
+        <!-- tab bar -->
+        <ul data-bind="foreach: dataTabSource">
+            <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
+        </ul>
 
+        <!-- tab contents -->
+        <!-- ko foreach: dataTabSource -->
+            <div data-bind="attr: {id: 'tab-' + id}">
+                <div data-bind="ojModule: {
+                            name: 'labor/' + fileNameJs,
+                            viewName: 'labor/' + fileName + '-large'}">
+                </div>
+            </div>
+            <!-- /ko -->
+    </div>
+    <h2 data-bind="text: currentSection"></h2>
 </script>
 
 <div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
