updated to navigationlist instead of tabs

--- a/OracleJETApplication/templates/icare.tmpl.html
+++ b/OracleJETApplication/templates/icare.tmpl.html
@@ -1,5 +1,6 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
+<!--
      <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
         <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
@@ -10,28 +11,31 @@
         <a href="#">change</a>
         </span>
     </div>
-    <div class="oj-xl-10 oj-lg-10 oj-md-10 oj-sm-12 oj-col" data-bind="if: router.stateId(), click:toggleSections">
-        <div class="oj-panel demo-page-content-area" data-bind="with: router.currentState()">
-            <div id="currentPage" class="oj-header-border" data-bind="text: label"></div>
-        </div>
-    </div>
-    <div class="oj-row">
-        <div class="oj-xl-2 oj-lg-2 oj-md-2 oj-sm-12 oj-col" data-bind="visible: sectionsState">
-            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
-                <ul data-bind="foreach: router.states">
-                    <li data-bind="attr: {id: id}, click: $parent.toggleSections">
-                        <a data-bind="text: label"></a>
-                    </li>
-                </ul>
+-->
+    <div class="oj-row oj-cols-nopad">
+        <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+            <div data-bind="with: router.currentState()">
+                <div id="currentPage" data-bind="text: label"></div>
             </div>
         </div>
-        <div class="oj-xl-10 oj-lg-10 oj-md-10 oj-sm-12 oj-col" data-bind="if: router.stateId()">
-            <div class="oj-panel demo-page-content-area" data-bind="with: router.currentState()">
-                <h2 id="currentPage" class="oj-header-border" data-bind="text: label"></h2>
+        <div class="oj-row">
+            <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
+                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+                    <ul data-bind="foreach: router.states">
+                        <li data-bind="attr: {id: id}, click: $parent.toggleSections">
+                            <a data-bind="text: label"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
+                <div class="oj-panel" data-bind="with: router.currentState()">
+                    <h2 id="currentPage" data-bind="text: label"></h2>
 
-                <div data-bind="ojModule: {
-                            name: 'icare/' + value,
-                            viewName: 'icare/' + value +'/' + value + '-small'}">
+                    <div data-bind="ojModule: {
+                                name: 'icare/' + value,
+                                viewName: 'icare/' + value +'/' + value + '-small'}">
+                    </div>
                 </div>
             </div>
         </div>
@@ -40,7 +44,7 @@
 
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
-    <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
+    <div class="oj-col oj-md-12 page-header">
         <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
             <span data-bind="text: pageHeading"></span>
@@ -52,8 +56,8 @@
     </div>
 
     <div class="oj-row">
-        <div class="oj-xl-2 oj-lg-2 oj-md-2 oj-sm-12 oj-col">
-            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+        <div class="oj-md-12 oj-col">
+            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
                 <ul data-bind="foreach: router.states">
                     <li data-bind="attr: {id: id}">
                         <a data-bind="text: label"></a>
@@ -61,9 +65,9 @@
                 </ul>
             </div>
         </div>
-        <div class="oj-xl-10 oj-lg-10 oj-md-10 oj-sm-12 oj-col" data-bind="if: router.stateId()">
-            <div class="oj-panel demo-page-content-area" data-bind="with: router.currentState()">
-                <h2 id="currentPage" class="oj-header-border" data-bind="text: label"></h2>
+        <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
+            <div class="oj-panel" data-bind="with: router.currentState()">
+                <h2 id="currentPage" data-bind="text: label"></h2>
 
                 <div data-bind="ojModule: {
                             name: 'icare/' + value,
