--- a/OracleJETApplication/templates/icare.tmpl.html
+++ b/OracleJETApplication/templates/icare.tmpl.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
-                <div class="oj-panel" data-bind="with: router.currentState()">
+                <div class="oj-panel tab-content" data-bind="with: router.currentState()">
                     <h2 id="currentPage" data-bind="text: label"></h2>
 
                     <div data-bind="ojModule: {
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
-            <div class="oj-panel" data-bind="with: router.currentState()">
+            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
                 <h2 id="currentPage" data-bind="text: label"></h2>
 
                 <div data-bind="ojModule: {
