--- a/OracleJETApplication/templates/inventory-management.tmpl.html
+++ b/OracleJETApplication/templates/inventory-management.tmpl.html
@@ -1,15 +1,81 @@
-<h1>Inventory Content Area</h1>
-<div id="dialogWrapper">
-  <div style="display:none" id="modalDialog1" title="Modal Dialog"
-       data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide'}">
-     <div class="oj-dialog-body">
-       The dialog window can be moved, resized and closed with the 'x' icon.
-       Arbitrary content can be added to the the oj-dialog-body and oj-dialog-footer sections.
-     </div>
-     <div class="oj-dialog-footer">
-        <button id="okButton" data-bind="ojComponent: {component: 'ojButton', label: 'OK'}"> </button>
-      </div>
-  </div>
-  <button id="buttonOpener" data-bind="ojComponent: {component: 'ojButton', label: 'Open Modal Dialog'}"></button>
+<!-- small template -->
+<script type="text/html" id="sm_template">
+<!--
+     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
+        <h1>
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>
+        </span>
+    </div>
+-->
+    <div class="oj-row oj-cols-nopad">
+        <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+            <div data-bind="with: router.currentState()">
+                <div id="currentPage" data-bind="text: label"></div>
+            </div>
+        </div>
+        <div class="oj-row">
+            <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
+                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+                    <ul data-bind="foreach: router.states">
+                        <li data-bind="attr: {id: id}, click: $parent.toggleSections">
+                            <a data-bind="text: label"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
+                <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                    <h2 id="currentPage" data-bind="text: label"></h2>
 
-</div>
+                    <div data-bind="ojModule: {
+                                name: 'inventory-management/' + value,
+                                viewName: 'inventory-management/' + value +'/' + value + '-small'}">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+    <div class="oj-col oj-md-12 page-header">
+        <h1>
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>
+        </span>
+    </div>
+
+    <div class="oj-row">
+        <div class="oj-md-12 oj-col">
+            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
+                <ul data-bind="foreach: router.states">
+                    <li data-bind="attr: {id: id}">
+                        <a data-bind="text: label"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
+            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                <h2 id="currentPage" data-bind="text: label"></h2>
+
+                <div data-bind="ojModule: {
+                            name: 'inventory-management/' + value,
+                            viewName: 'inventory-management/' + value +'/' + value + '-large'}">
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
