--- a/OracleJETApplication/templates/enterprise/inventory-management/inventory-management-large.tmpl.html
+++ b/OracleJETApplication/templates/enterprise/inventory-management/inventory-management-large.tmpl.html
@@ -1,1 +1,7 @@
-Hello from inventory management large
+<div class="tbd">Content TBD
+           <span data-bind="ojModule: {
+            name: 'labor',
+            viewName: 'labor/labor-reuse'}">
+    </span>
+     -large
+</div>
