--- a/OracleJETApplication/templates/icare/schedules-timecards/schedules-timecards-small.tmpl.html
+++ b/OracleJETApplication/templates/icare/schedules-timecards/schedules-timecards-small.tmpl.html
@@ -1,1 +1,7 @@
-Hello from schedules &amp; timecards small
+<div class="tbd">Content TBD
+           <span data-bind="ojModule: {
+            name: 'labor',
+            viewName: 'labor/labor-reuse'}">
+    </span>
+     -small
+</div>
