--- a/OracleJETApplication/templates/icare/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/icare/profile/profile-large.tmpl.html
@@ -1,1 +1,7 @@
-Hello from profile large
+<div class="tbd">Content TBD
+           <span data-bind="ojModule: {
+            name: 'labor',
+            viewName: 'labor/labor-reuse'}">
+    </span>
+     -large
+</div>
