--- a/OracleJETApplication/templates/header.tmpl.html
+++ b/OracleJETApplication/templates/header.tmpl.html
@@ -19,7 +19,7 @@
                              }">
             </button>
         </div>
-        <div class="oj-sm-3 oj-helper-text-align-right">
+        <div class="oj-sm-3 oj-col oj-helper-text-align-right">
             <ul id="appheaderGlobalNavMenuId" data-bind="ojComponent: {component: 'ojMenu', select: menuItemSelect}" style="display:none">
 
                 <li data-bind="attr: {label: userName}">
