--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -1,118 +1,120 @@
-    <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12">
-        <div id="form-container" class="oj-form">
-            <div class="oj-col oj-lg-8 oj-xl-8 left leftColPeople">
-                <div class="oj-row">
-                    <div class="searchTitle">
-                        <h4>Search Criteria <a href="#">view all employees</a></h4>
-                    </div>
-                </div>
-                <!-- End of Row -->
-                <div class="oj-md-odd-cols-3 oj-md-even-cols-3 oj-lg-odd-cols-3 oj-lg-even-cols-3 searchForm">
+    <div class="oj-row oj-cols-nopad">
+        <div class="oj-col oj-sm-12 oj-md-12 oj-lg-12 oj-xl-12">
+            <div id="form-container" class="oj-form">
+                <div class="oj-col oj-lg-8 oj-xl-8">
                     <div class="oj-row">
-                        <div class="oj-col">
-                            <label for="payrollid">Payroll ID</label>
-                            <input id="payrollid" data-bind="ojComponent: {component: 'ojInputText', value:'',
-                                                     help: {definition: helpDef()}}">
+                        <div class="searchTitle">
+                            <h4>Search Criteria <a href="#">view all employees</a></h4>
                         </div>
-                        <!-- End of Col -->
-                        <div class="oj-col">
-                            <label for="firstname">First Name</label>
-                            <input id="firstname" data-bind="ojComponent: {component: 'ojInputText', value:'',
-                                                  help: {definition: helpDef()}}">
-                        </div>
-                        <!-- End of Col -->
-                        <div class="oj-col">
-                            <label for="lastname">Last Name</label>
-                            <input id="lastname" data-bind="ojComponent: {component: 'ojInputText', value:'',
-                                                  help: {definition: helpDef()}}">
-                        </div>
-                        <!-- End of Col -->
-                        <div class="oj-col">
-                            <label for="basicSelect">Single Select </label>
-                            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect',
-                                                                                                  value: val,
-                                                                                                  rootAttributes: {style:'max-width:20em'}}">
-                                <option value="IE">Internet Explorer</option>
-                                <option value="FF">Firefox</option>
-                                <option value="CH">Chrome</option>
-                                <option value="OP">Opera</option>
-                                <option value="SA">Safari</option>
-                            </select>
-                        </div>
-                        <!-- End of Col -->
                     </div>
                     <!-- End of Row -->
-
-                </div>
-                <!-- End of column -->
-
-                <div class="oj-md-5 oj-lg-5 oj-xl-5 left">
-                    <div class="checkboxWrapper">
-                        <label id="mainlabelid">STATUS</label>
-                        <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
-                                              component: 'ojCheckboxset',
-                                              value: currentStatus}">
-                            <span class="oj-choice-row">
-                                                  <input id="active" type="checkbox" value="Active">
-                                                  <label for="active">Active</label>
-                                                </span>
-                            <span class="oj-choice-row">
-                                                  <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended">
-                                                  <label for="inactivesuspended">Inactive-Suspended</label>
-                                                </span>
-                            <span class="oj-choice-row">
-                                                  <input id="inactiveterm" type="checkbox" value="Inactive-Terminated">
-                                                  <label for="inactiveterm">Inactive-Terminated</label>
-                                                </span>
+                    <div class="oj-md-odd-cols-3 oj-md-even-cols-3 oj-lg-odd-cols-3 oj-lg-even-cols-3 searchForm">
+                        <div class="oj-row">
+                            <div class="oj-col">
+                                <label for="payrollid">Payroll ID</label>
+                                <input id="payrollid" data-bind="ojComponent: {component: 'ojInputText', value:'',
+                                                         help: {definition: helpDef()}}">
+                            </div>
+                            <!-- End of Col -->
+                            <div class="oj-col">
+                                <label for="firstname">First Name</label>
+                                <input id="firstname" data-bind="ojComponent: {component: 'ojInputText', value:'',
+                                                      help: {definition: helpDef()}}">
+                            </div>
+                            <!-- End of Col -->
+                            <div class="oj-col">
+                                <label for="lastname">Last Name</label>
+                                <input id="lastname" data-bind="ojComponent: {component: 'ojInputText', value:'',
+                                                      help: {definition: helpDef()}}">
+                            </div>
+                            <!-- End of Col -->
+                            <div class="oj-col">
+                                <label for="basicSelect">Single Select </label>
+                                <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect',
+                                                                                                      value: val,
+                                                                                                      rootAttributes: {style:'max-width:20em'}}">
+                                    <option value="IE">Internet Explorer</option>
+                                    <option value="FF">Firefox</option>
+                                    <option value="CH">Chrome</option>
+                                    <option value="OP">Opera</option>
+                                    <option value="SA">Safari</option>
+                                </select>
+                            </div>
+                            <!-- End of Col -->
                         </div>
-                        <!-- End of main label id -->
+                        <!-- End of Row -->
+
                     </div>
-                    <!-- checkBox Wrapper -->
-                </div>
-                <!-- End of Column 1 -->
-                <div class="oj-md-1 oj-lg-1 oj-xl-1 left">
-                    <div class="divider"></div>
-                </div>
-                <div class="oj-md-6 oj-lg-6 oj-xl-6 right">
-                    <div class="checkboxWrapper">
-                        <label id="mainlabelid">MORE OPTIONS</label>
-                        <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
-                                              component: 'ojCheckboxset',
-                                              value: currentStatus}">
-                            <span class="oj-choice-row">
-                                                  <input id="minor" type="checkbox" value="Minor">
-                                                  <label for="minor">Minor</label>
-                                                </span>
-                            <span class="oj-choice-row">
-                                                  <input id="termLOA" type="checkbox" value="Included Terminated & LOA Employees">
-                                                  <label for="termLOA">Included Terminated & LOA Employees</label>
-                                                </span>
+                    <!-- End of column -->
+
+                    <div class="oj-md-5 oj-lg-5 oj-xl-5 left">
+                        <div class="checkboxWrapper">
+                            <label id="mainlabelid">STATUS</label>
+                            <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                                  component: 'ojCheckboxset',
+                                                  value: currentStatus}">
+                                <span class="oj-choice-row">
+                                                      <input id="active" type="checkbox" value="Active">
+                                                      <label for="active">Active</label>
+                                                    </span>
+                                <span class="oj-choice-row">
+                                                      <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended">
+                                                      <label for="inactivesuspended">Inactive-Suspended</label>
+                                                    </span>
+                                <span class="oj-choice-row">
+                                                      <input id="inactiveterm" type="checkbox" value="Inactive-Terminated">
+                                                      <label for="inactiveterm">Inactive-Terminated</label>
+                                                    </span>
+                            </div>
+                            <!-- End of main label id -->
                         </div>
-                        <!-- End of main label id -->
+                        <!-- checkBox Wrapper -->
                     </div>
-                    <!-- checkBox Wrapper -->
+                    <!-- End of Column 1 -->
+                    <div class="oj-md-1 oj-lg-1 oj-xl-1 left">
+                        <div class="divider"></div>
+                    </div>
+                    <div class="oj-md-6 oj-lg-6 oj-xl-6 right">
+                        <div class="checkboxWrapper">
+                            <label id="mainlabelid">MORE OPTIONS</label>
+                            <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                                  component: 'ojCheckboxset',
+                                                  value: currentStatus}">
+                                <span class="oj-choice-row">
+                                                      <input id="minor" type="checkbox" value="Minor">
+                                                      <label for="minor">Minor</label>
+                                                    </span>
+                                <span class="oj-choice-row">
+                                                      <input id="termLOA" type="checkbox" value="Included Terminated & LOA Employees">
+                                                      <label for="termLOA">Included Terminated & LOA Employees</label>
+                                                    </span>
+                            </div>
+                            <!-- End of main label id -->
+                        </div>
+                        <!-- checkBox Wrapper -->
+                    </div>
+                    <!-- End of Column 2 -->
+
+
                 </div>
-                <!-- End of Column 2 -->
+                <!-- End of Right Column -->
+                <div class="oj-md-only-hide oj-lg-4 oj-xl-4 right">
+                    <div class="resultWrapper"></div>
+                </div>
+                <!-- End of right Column -->
+                <div class="oj-col oj-lg-hide oj-xl-hide">
+                    <div class="resultWrapper"></div>
+                </div>
+                <div class="submitWrapper left">
+                    <input id="submit" type="submit" data-bind="click: buttonClick,
+                                                     ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
 
+                    <input id="reset" type="reset" data-bind="click: buttonClick,
+                                                  ojComponent: {component: 'ojButton', label: 'Clear'}" />
+                </div>
+            </div>
+            <!-- End of Form -->
 
-            </div>
-            <!-- End of Right Column -->
-            <div class="oj-md-only-hide oj-lg-4 oj-xl-4 right">
-                <div class="resultWrapper"></div>
-            </div>
-            <!-- End of right Column -->
-            <div class="oj-col oj-lg-hide oj-xl-hide">
-                <div class="resultWrapper"></div>
-            </div>
-            <div class="submitWrapper left">
-                <input id="submit" type="submit" data-bind="click: buttonClick,
-                                                 ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
-
-                <input id="reset" type="reset" data-bind="click: buttonClick,
-                                              ojComponent: {component: 'ojButton', label: 'Clear'}" />
-            </div>
         </div>
-        <!-- End of Form -->
-
     </div>
     <!-- End of Column -->
